# e-paper-todo2

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  TASKS.md  pyproject.toml  todo-board-spec.md
docs/: raspberry-pi-setup.md  raspi-setup-instructions.md  spike-results.md
src/wall_todo/: convert.py  epaper.py  fallback.py  main.py  renderer.py  todoist.py
src/wall_todo/templates/: board.html
